--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,10 @@ fastapi = "^0.97.0"
 redis = "^4.5.5"
 uvicorn = "^0.22.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.3.3"
 black = "^23.3.0"
-pytest = "^7.3.2"
+pytest = "^7.4.0"
 watchdog = "^3.0.0"
 
 [build-system]
