--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pre-commit = "^3.3.3"
 black = "^23.3.0"
 pytest = "^7.4.0"
 watchdog = "^3.0.0"
+mypy = "^1.4.0"
+types-redis = "^4.5.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
