--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.11"
 fastapi = "^0.97.0"
 redis = "^4.5.5"
 uvicorn = "^0.22.0"
+sqlalchemy = "^2.0.17"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
