--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,16 @@ services:
     build: .
     container_name: slowking-api-eventbus
     command: api
+    environment:
+      DB_HOST: slowking-db
+      DB_PASSWORD: "abc123"
     volumes:
       - ./src:/home/app/src
     ports:
       - 8091:8091
     restart: on-failure
     depends_on:
+      - postgres
       - redis
       - slowking-event-consumer
 
@@ -19,8 +23,11 @@ services:
     container_name: slowking-event-consumer
     command: event-consumer
     depends_on:
+      - postgres
       - redis
     environment:
+      DB_HOST: slowking-db
+      DB_PASSWORD: "abc123"
       REDIS_HOST: "slowking-redis-broker"
       REDIS_PORT: 63791
     volumes:
@@ -34,7 +41,17 @@ services:
     ports:
       - 63791:63791
 
+  postgres:
+    image: postgres:15.3
+    container_name: slowking-db
+    environment:
+      POSTGRES_USER: slowking
+      POSTGRES_PASSWORD: "abc123"
+    ports:
+      - "54321:5432"
+
 volumes:
   slowking-api-eventbus:
   slowking-api-event-consumer:
   redis:
+  postgres:
