--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       POSTGRES_PASSWORD: "abc123"
     ports:
       - "54321:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
 volumes:
   slowking-api-eventbus:
