--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.97.0"
 redis = "^4.5.5"
 uvicorn = "^0.22.0"
 sqlalchemy = "^2.0.17"
+psycopg2-binary = "^2.9.6"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
