--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,13 @@ services:
     build: .
     container_name: slowking-api-eventbus
     command: api
+    env_file:
+      - .env
     environment:
       DB_HOST: slowking-db
       DB_PASSWORD: "abc123"
+      # DB_HOST: ${DB_HOST?Variable not set}
+      # DB_PASSWORD: ${DB_PASSWORD?Variable not set}
     volumes:
       - ./src:/home/app/src
     ports:
@@ -22,14 +26,18 @@ services:
     build: .
     container_name: slowking-event-consumer
     command: event-consumer
+    env_file:
+      - .env
     depends_on:
       - postgres
       - redis
     environment:
       DB_HOST: slowking-db
       DB_PASSWORD: "abc123"
-      REDIS_HOST: "slowking-redis-broker"
-      REDIS_PORT: 63791
+      REDIS_HOST: ${REDIS_HOST?Variable not set}
+      REDIS_PORT: ${REDIS_PORT?Variable not set}
+      # REDIS_HOST: "slowking-redis-broker"
+      # REDIS_PORT: 63791
     volumes:
       - ./src:/home/app/src
 
