--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,8 @@
+# dev stage env vars
 REDIS_HOST="slowking-redis-broker"
 REDIS_PORT="63791"
+DB_HOST="slowking-db"
+DB_PORT="5432"
+POSTGRES_DB="slowking"
+POSTGRES_PASSWORD="abc123"
+POSTGRES_USER="slowking"
