--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
   rev: '1.5.1'
   hooks:
     - id: poetry-check
-    - id: poetry-lock
+    # - id: poetry-lock
 - repo: https://github.com/asottile/blacken-docs
   rev: v1.12.1
   hooks:
