--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -44,6 +44,7 @@ tasks:
   install:
     desc: Install dependencies (locally, not in Docker)
     cmds:
+      - pyenv local
       - task: env-file
       - task: local-env
       - source .venv/bin/activate
