--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ uvicorn = "^0.22.0"
 sqlalchemy = "^2.0.17"
 psycopg2-binary = "^2.9.6"
 pydantic = "^1.10.9"
+requests = "^2.31.0"
+tenacity = "^8.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
