--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,8 +54,9 @@ services:
       POSTGRES_DB: ${POSTGRES_DB?Variable not set}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD?Variable not set}
       POSTGRES_USER: ${POSTGRES_USER?Variable not set}
+      PGPORT: ${DB_PORT?Variable not set}
     ports:
-      - "54321:5432"
+      - "54322:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
 
