--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       DB_HOST: ${SLOWKING_DB_HOST?Variable not set}
       POSTGRES_PASSWORD: ${SLOWKING_POSTGRES_PASSWORD?Variable not set}
     volumes:
-      - ./src:/home/app/src
+      - ./slowking:/home/app/slowking
     ports:
       - 8091:8091
     restart: on-failure
@@ -19,8 +19,8 @@ services:
       - slowking-postgres
       - slowking-redis
       - slowking-event-consumer
-    networks:
-      - network_eigen_dev
+    # networks:
+    #   - network_eigen_dev
 
   slowking-event-consumer:
     build: .
@@ -37,9 +37,9 @@ services:
       - slowking-postgres
       - slowking-redis
     volumes:
-      - ./src:/home/app/src
-    networks:
-      - network_eigen_dev
+      - ./slowking:/home/app/slowking
+    # networks:
+    #   - network_eigen_dev
 
   slowking-redis:
     container_name: slowking-redis-broker
@@ -48,8 +48,8 @@ services:
     command: --port 63791
     ports:
       - 63791:63791
-    networks:
-      - network_eigen_dev
+    # networks:
+    #   - network_eigen_dev
 
   slowking-postgres:
     image: postgres:15.3
@@ -65,13 +65,13 @@ services:
       - "54322:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-    networks:
-      - network_eigen_dev
+    # networks:
+    #   - network_eigen_dev
 
-networks:
-  network_eigen_dev:
-    name: eigen_dev_default
-    external: true
+# networks:
+#   network_eigen_dev:
+#     name: eigen_dev_default
+#     external: true
 
 volumes:
   slowking-api-eventbus:
