hardcoded req to eigen token endpoint 200

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,27 +22,31 @@ tasks:
       - task: env-file
       - docker-compose up
 
-  # up-bus:
-  #   desc: Run the application via docker-compose
-  #   cmds:
-  #     - task: env-file
-  #     - source .venv/bin/activate
-  #     - poetry@1.5.1 run python -m src.entrypoints.event_consumer
-
   start:
     desc: Make a request to the application using HTTPie to start a benchmark
     cmds:
       - http POST localhost:8091/api/v1/benchmarks/start @./tests/data/payload.json
 
-  api-health:
-    desc: Make a request to the application using HTTPie to /health endpoint
-    cmds:
-      - http localhost:8091/api/v1/health
+  # api-token:
+  #   desc: Make a request to the application using HTTPie to /token endpoint
+  #   cmds:
+  #     - http -v POST localhost:8001/auth/v1/token/ @./tests/data/auth.json
 
-  api-token:
-    desc: Make a request to the application using HTTPie to /token endpoint
+  api-eigen-health:
+    desc: Make a request to the Mock Eigen API health/ endpoint using HTTPie
     cmds:
-      - http -v POST localhost:8001/auth/v1/token/ @./tests/data/auth.json
+      - http localhost:8283/health
+
+  api-slowking-health:
+    desc: Make a request to the slowking health/ endpoint using HTTPie
+    cmds:
+      - http localhost:8283/health
+
+  api-health:
+    desc: Make requests to the /health endpoints using HTTPie
+    cmds:
+      - task: api-eigen-health
+      - task: api-slowking-health
 
   event:
     desc: Make a request to the application using HTTPie with a test event
