--- a/eigenapi/pyproject.toml
+++ b/eigenapi/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.99.0"
 uvicorn = "^0.22.0"
 requests = "^2.31.0"
 tenacity = "^8.2.2"
+python-multipart = "^0.0.6"
 
 
 [build-system]
