--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.6"
 pydantic = "^1.10.9"
 requests = "^2.31.0"
 tenacity = "^8.2.2"
+alembic = "^1.11.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
@@ -67,3 +68,15 @@ per-file-ignores = {}
 
 # Same as Black.
 line-length = 88
+
+[tool.ruff.isort]
+known-third-party = [
+    "alembic",
+    "fastapi",
+    "psycopg2",
+    "pydantic",
+    "requests",
+    "sqlalchemy",
+    "tenacity",
+    "uvicorn",
+]
