--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -118,3 +118,11 @@ tasks:
     cmds:
       - source .venv/bin/activate
       - pytest -vv
+
+  nuke:
+    desc: Stop and remove all containers, networks, volumes and postgres-data
+    # prompt is an unreleased feature.
+    prompt: This will nuke containers, volumes and postgres data... Do you want to continue?
+    cmds:
+      - docker-compose down -v --remove-orphans
+      - rm -rf ./postgres-data
