--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^7.4.0"
 watchdog = "^3.0.0"
 mypy = "^1.4.0"
 types-redis = "^4.5.5.2"
+httpx = "^0.24.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
