--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ watchdog = "^3.0.0"
 mypy = "^1.4.0"
 types-redis = "^4.5.5.2"
 httpx = "^0.24.1"
+ruff = "^0.0.277"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
