--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -121,8 +121,7 @@ tasks:
   test:
     desc: Run tests (locally, not in Docker)
     cmds:
-      - source .venv/bin/activate
-      - pytest -vv
+      - poetry run pytest -vv
 
   nuke:
     desc: Stop and remove all containers, networks, volumes and postgres-data
