--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ mypy = "^1.4.0"
 types-redis = "^4.5.5.2"
 httpx = "^0.24.1"
 ruff = "^0.0.277"
+types-requests = "^2.31.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
