--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,15 +29,28 @@ jobs:
         version: 3.x
     - name: Install dependencies
       run: poetry install
-  lint:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Lint and formatting check
+    - name: Lint and format check
       run: task fmt-check
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - name: Test with pytest
       run: task test
+    - name: Run mypy
+      run: task mypy
+
+
+# FIXME built env in build is not shared to lint, test jobs
+# https://docs.docker.com/build/ci/github-actions/share-image-jobs/
+# or
+# https://github.com/cdalvaro/docker-salt-master/blob/c556e06e5527cc2dc95966039858671f5f16cebe/.github/workflows/build-and-test.yml
+
+    # lint:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #   - name: Lint and formatting check
+  #     run: task fmt-check
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #   - name: Test with pytest
+  #     run: task test
