--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
 name: CI
 
-on: [push, pull_request]
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -31,8 +30,8 @@ jobs:
       run: poetry install
     - name: Lint and format check
       run: task fmt-check
-    - name: Test with pytest
-      run: task test
+    - name: Test coverage with pytest
+      run: task cov
     - name: Run mypy
       run: task mypy
 
