--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,14 @@ repos:
   rev: '1.5.1'
   hooks:
     - id: poetry-check
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.1.3'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.1.3
   hooks:
   - id: ruff
     args: [--fix, --exit-non-zero-on-fix]
 - repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
   rev: v0.1.3
   hooks:
     - id: ruff-format
