--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,22 @@
 # See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
   - id: check-yaml
   - id: check-toml
 - repo: https://github.com/python-poetry/poetry
   rev: '1.5.1'
   hooks:
     - id: poetry-check
-    # - id: poetry-lock
-- repo: https://github.com/asottile/blacken-docs
-  rev: v1.12.1
-  hooks:
-  - id: blacken-docs
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  # must run before Black and other formatting tools.
-  rev: 'v0.0.275'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.1.3
   hooks:
   - id: ruff
     args: [--fix, --exit-non-zero-on-fix]
-- repo: https://github.com/psf/black
-  rev: '23.3.0'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.1.3
   hooks:
-  - id: black
+    - id: ruff-format
