--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,7 @@
 # https://taskfile.dev
-version: '3'
+version: "3"
 
-dotenv: ['.env']
+dotenv: [".env"]
 
 tasks:
   default:
@@ -134,7 +134,6 @@ tasks:
 
   nuke:
     desc: Stop and remove all containers, networks, volumes, postgres-data and CSV reports
-    # prompt released in v3.26.0 - TODO upgrade using brew
     prompt: This will nuke containers, volumes and postgres data... Do you want to continue?
     cmds:
       - docker-compose down -v --remove-orphans
